# crossover-calendar-sync

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
quickstart_sample/: quickstart.py
